third_party/move/move-compiler-v2/tests/verification/verify/double_annotation.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/verification/verify/double_annotation.move:8:7
  │
7 │     #[verify_only]
  │       ----------- Attribute previously given here
8 │     #[verify_only]
  │       ^^^^^^^^^^^ Duplicate attribute 'verify_only' attached to the same item

error: duplicate declaration, item, or annotation
   ┌─ tests/verification/verify/double_annotation.move:18:7
   │
17 │     #[verify_only]
   │       ----------- Attribute previously given here
18 │     #[verify_only]
   │       ^^^^^^^^^^^ Duplicate attribute 'verify_only' attached to the same item
